added copy transactions to cliptboard

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 	
 		<div class="jumbotron text-center" id="div_header">
-			<label id="versionInfo"> Ver: 1 | verDate: 29082019.2148</label>
+			<label id="versionInfo"> Ver: 1 | verDate: 3108219.1550</label>
 			<h1>WeOweU</h1>
 
 			<p>Based on attending parties and their financial contribution, Calculate money distribution between parties.</p>
@@ -43,6 +43,9 @@
 				</div>
 
 				<div class="col-sm-12 panel" id="panel_result">
+
+					<textarea id="copiableTransaction" style="position: absolute; left: -1000px; top: -1000px;" value="" rows="9"></textarea> 
+					
 					<div id="div_table" class="col-sm-4 offset-4">
 						<table class="table table-responsive-sm">
 							<thead>
