added multiselect POC

--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 	  <meta name="author" content="Michael Roskin">
 	  
 	  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/css/bootstrap-multiselect.css" integrity="sha256-7stu7f6AB+1rx5IqD8I+XuIcK4gSnpeGeSjqsODU+Rk=" crossorigin="anonymous" />
 	  <link href="style.css" rel="stylesheet">
 	  
 	  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 	  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.min.js" integrity="sha256-qoj3D1oB1r2TAdqKTYuWObh01rIVC1Gmw9vWp1+q5xw=" crossorigin="anonymous"></script>
 	  <script src="script.js"></script>
+	  <!-- <script src="util.js"></script>
+	  <script src="calc.js"></script>
+	  <script src="sidepot.js"></script> -->
+
 
 	</head>
 
@@ -37,8 +43,7 @@
 		<div class="container" id="mainContainer" style="text-align: center;">
 			<div class="row">
 
-				<div class="col-12 panel" id="panel_payers">
-				</div>
+				<div class="col-12 panel" id="panel_payers"></div>
 
 				<div class="col-12 panel" id="panel_result">
 
