--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
 	<body>
 	
 		<div class="jumbotron text-center" id="div_header">
-			<label id="versionInfo"> Ver: 1 | verDate: 3108219.1718</label> <!--version number and insert hardCoded names-->
+			<label id="versionInfo"> Ver: 1 | verDate: 3108219.1718</label>
 			<div class="row col-12" style="justify-content: center;">
 				<h1>WeOweU</h1>
 
 				<p>Calculate funds distribution, so that all parties break even.</p>
 
 				<div class="col-12">
-					<input class="form-control" type="number" placeholder="# of attendants" max="25" min="2" value="9" id="input_attendNum" style="text-align: center;">
+					<input class="form-control" type="number" placeholder="# of attendants" max="25" min="2" value="8" id="input_attendNum" style="text-align: center;">
 				</div>
 				<button class="btn btn-primary btn_start">Start</button>
+				<button class="btn btn-primary btn_test">Test</button>
 			</div>
 		</div>	
 
