--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	  
 	  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/css/bootstrap-multiselect.css" integrity="sha256-7stu7f6AB+1rx5IqD8I+XuIcK4gSnpeGeSjqsODU+Rk=" crossorigin="anonymous" />
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	  <link href="style.css" rel="stylesheet">
 	  
 	  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
@@ -34,7 +35,7 @@
 				<p>Calculate funds distribution, so that all parties break even.</p>
 
 				<div class="col-12">
-					<input class="form-control" type="number" placeholder="# of attendants" max="25" min="2" value="3" id="input_attendNum" style="text-align: center;">
+					<input class="form-control" type="number" placeholder="# of attendants" max="25" min="2" value="7" id="input_attendNum" style="text-align: center;">
 				</div>
 				<button class="btn btn-primary btn_start">Start</button>
 			</div>
