split single javaScript file into separated namespaces.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 	  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 	  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.15/js/bootstrap-multiselect.min.js" integrity="sha256-qoj3D1oB1r2TAdqKTYuWObh01rIVC1Gmw9vWp1+q5xw=" crossorigin="anonymous"></script>
-	  <script src="script.js"></script>
-	  <!-- <script src="util.js"></script>
+	  <script src="view.js"></script>
 	  <script src="calc.js"></script>
-	  <script src="sidepot.js"></script> -->
-
-
+	  <script src="util.js"></script>
+	  <script src="site.js"></script>
 	</head>
 
 	<body>
