--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</div>	
 
 		<div class="container" id="mainContainer" style="text-align: center;">
-			<div class="row">
+			<div class="row mainRow">
 
 				<div class="col-12 panel" id="panel_payers"></div>
 
