--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 		<div class="jumbotron text-center" id="div_header">
 			<label id="versionInfo"> Ver: 2.1 | verDate: 20012020.0046</label> <!--version number and insert hardCoded names-->
 			<div class="row col-12" style="justify-content: center;">
-				<h1>WeOweU</h1>
+				<div style='font-family: monospace;'>
+					<label class='lbl_we'>we</label>
+					<label class='lbl_o'>O</label>
+					<label class='lbl_u'>u.</label class='lbl_we'>
+				</div>
 
 				<p>Calculate funds distribution, so that all parties break even.</p>
 
