success! sharing via whatsapp works
new line break is fixed.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<body>
 	
 		<div class="jumbotron text-center" id="div_header">
-			<label id="versionInfo"> Ver: 2.1 | verDate: 26012020.18012020</label> <!--version number and insert hardCoded names-->
+			<label id="versionInfo"> Ver: 2.1 | verDate: 26012020.1840</label> <!--version number and insert hardCoded names-->
 			<div class="row col-12" style="justify-content: center;">
 				<div style='font-family: monospace;'>
 					<label class='lbl_we'>we</label>
