--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 	<body>
 	
 		<div class="jumbotron text-center" id="div_header">
-			<label id="versionInfo"> Ver: 2.3 | verDate: 21022020.0023</label> <!--version number and insert hardCoded names-->
+			<label id="versionInfo"> Ver: 2.1 | verDate: 26012020.1840</label> <!--version number and insert hardCoded names-->
 			<div class="row col-12" style="justify-content: center;">
 				<div class="div_logo" style='font-family: monospace;'>
 					<label class='lbl_we'>we</label>
-					<img class="svg_dollar"  src="assets/img/dollarSign.svg">
+					<div class="div_svg">
+						<img class="svg_dollar"  src="assets/img/svg_dollar.svg">
+						<img class="svg_circle"  src="assets/img/rotation_arrows.svg">
+					</div>
 					<label class='lbl_u'>u.</label class='lbl_we'>
 				</div>
 
