--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 	<head>
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	  <title>WeOweU</title>
+	  <title>kuzaznu</title>
 	  <meta name="description" content="Calculate money distribution between parties">
 	  <meta name="author" content="Michael Roskin">
 	  
